Api gateway implementation